Fix(liveEdit) : fix z-index elements

--- a/components/SampelComponents/Sm_Video/video.module.scss
+++ b/components/SampelComponents/Sm_Video/video.module.scss
@@ -10,7 +10,7 @@
         min-height: 490px;
         min-width: 490px;
         margin: 3 em auto;
-        z-index: 1;
+        // z-index: 1;
         box-shadow: -10px 10px 80px rgb(0 0 0 / 10%);
         border-radius: 5px;
         padding: 1em;
@@ -32,7 +32,7 @@
     position: absolute;
     left: 25px;
     bottom: 20px;
-    z-index: 2;
+    z-index: 1;
 }
 .wrap_icon {
     i {
